# summarAIzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  app.py  docker-compose.dev.yml  docker-compose.yml  main.py  migration.py  pyproject.toml  regenerate_all.py  requirements-dev.txt  requirements.txt  seed_dev_data.py  setup.cfg
.github/workflows/: deploy-to-dev.yml  tests.yml
alembic/: env.py
alembic/versions/: 02af88d664fa_add_session_audio_files.py  394aa465482b_add_session_description_field.py  7d21f6b31f77_add_editorial_review_flags_for_sessions_and_.py  85aaad85971b_add_session_popularity_table.py  89c13d4cc639_add_published_documentation_artifact_.py  9fd5db95bfc6_initial.py  a7c9e2b4d1f0_remove_legacy_session_owner_id.py  afc348e0074b_initial.py  afc348e0074c_rename_categories_to_tags.py  b20a3e019d21_add_user_identity_and_api_key_role_subset.py  c7e3d4a9b1f2_add_session_external_ids.py  e3456a75212d_add_lab_and_other_session_formats_with_.py  f1a2c3d4e5f6_add_session_owners_and_ownership_claims.py
app/: __init__.py
app/async_jobs/: __init__.py  celery_app.py  tasks.py
app/cli/: __init__.py  __main__.py  api_keys.py  common.py  main.py  seed_dev_data.py  workflow_tasks.py
app/config/: settings.py  wordcloud_stopwords.py
app/constants/: embedding.py
app/crud/: audio_file.py  base.py  event.py  generated_content.py  session.py  session_popularity.py
app/database/: connection.py  models.py
app/events/: __init__.py  session_events.py
app/routes/: api_key.py  embedding.py  event.py  session.py  session_content.py  session_workflow.py  v2.py  workflow_debug.py
app/schemas/: api_key.py  content.py  session.py
app/security/: auth.py  validator.py
app/services/: audio_processing_service.py  docling_service.py  documentation_builder.py  embedding_factory.py  embedding_search_service.py  embedding_service.py  embeddings_manager.py  execution_service.py  image_generation_service.py  pdf_text_service.py  provider_request_control.py  s3_audio_service.py  s3_image_service.py  s3_service.py  s3_slide_service.py  session_export.py
app/utils/: helpers.py  matomo.py
app/workflows/: __init__.py  chat_models.py  content_types.py  execution_context.py  initialization.py
core/: __init__.py  app_state.py  competence_analyser.py  event_manager.py  gdpr_checker.py  image_generator.py  openai_client.py  prompt_library.py  public_publisher.py  quick_generator.py  resource_browser.py  review_routes.py  talk_manager.py  transcription_service.py
docs/: CLI.md  Content-Generierungs-Workflows.md  MVPZuV2Konzept.dwb
prompts/: image.json  mermaid.json  metadata.json  social_media.json  summary.json
resources/: README.md
scripts/: entrypoint.sh
tests/: __init__.py  conftest.py  test_api_event.py  test_api_session.py  test_auth.py  test_content_workflow.py  test_crud_event.py  test_crud_session.py  test_embeddings.py  test_execution_service.py  test_integration_workflows.py  test_langgraph_builders.py  test_routes_workflows.py  test_schemas.py  test_security.py  test_workflow_steps.py  test_workflows_utils.py
ui/: __init__.py  base_generator_tab.py  competences_tab.py  generator_tab.py  image_generator_tab.py  quick_generation_tab.py  shared_ui.py  talk_setup_tab.py  transcription_tab.py
ui/css/: app.css
(+103 files in other folders)
