[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "summaraizer"
version = "2.0.0"
description = "SummarAIzer - AI-powered text summarization API"
requires-python = ">=3.11"

# Tool configurations
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by Black)
    "B008",   # function call in default argument
    "E731",   # allow lambda assignment
]
unfixable = [
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**" = ["ARG001"]   # Allow unused test arguments (fixtures)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# 3rd party libraries without type hints
[[tool.mypy.overrides]]
module = [
    "celery.*",
    "chromadb.*",
    "langchain.*",
    "langgraph.*",
    "sqlalchemy.*",
    "alembic.*",
    "psycopg2.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
cache_dir = "/tmp/.pytest_cache"
markers = [
    "integration: integration tests (skip with: -m 'not integration')",
    "unit: unit tests",
    "slow: slow tests",
    "asyncio: async tests",
]
asyncio_mode = "auto"
timeout = 300  # 5 min timeout per test to catch hanging tests
# For parallel execution with pytest-xdist:
# Use 'loadscope' to distribute tests by test class/module scope
# This keeps related tests together and improves fixture efficiency
# Usage in CI: pytest -n auto --dist loadscope


[tool.coverage.run]
source = ["app"]
omit = [
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
